examples/valid/test_sample.ms
MainPrgm empty;
Var
let x: Float = 0.34;

BeginPg
{
}
EndPg;