examples/invalid/var_indexing.ms
MainPrgm empty;
Var

let X: Int;

BeginPg
{
    X[2] := 2;
}
EndPg;